# cmake-c-template

./: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  testmain.c
